<resources>
    <string name="app_name">MoneyCalculator</string>
    <string name="grpRegNo">Group Reg No:</string>
    <string name="grpName">Group Name:</string>
    <string name="startDate">Start Date:</string>
    <string name="shareAmt">Share Amount:</string>
    <string name="intRate">Interest Rate:</string>
    <string name="register">Register</string>
    <string name="grpAcId">Group Account Id :</string>
    <string name="grpMemberName"> Member Name :</string>
    <string name="penLoan">Pending Loan :</string>
    <string name="ltMeetDate">Last Meeting Date :</string>
    <string name="email">Email Id :</string>
    <string name="phone">Phone No :</string>
    <string name="ptId">Photo Id :</string>
    <string name="pin">Pin</string>
    <string name="label.login">Login</string>
    <string name="login">Enter Pin</string>
    <string name="loanDis"> Loan Disbursement Amount </string>
    <string name="paidAmt"> Paid Amount </string>
    <string name="meetDate"> Meeting Date</string>
    <string name="addMeeting"> Add Meeting </string>
    <string name="memberId"> Member Id : </string>
    <string name="totalMeetings"> Total Number Of Meetings: </string>
    <string name="totalShare"> Total Share Amount : </string>
    <string name="totalLoanAmt"> Total Loan Amount : </string>
    <string name="loanAmtIntPaidAmt"> Total Intrest Paid Amount : </string>
    <string name="pendingPrincilnAmt"> TotalPending Loan Amount : </string>
    <string name="amtNeedToClAlLn"> Amount Need To Close All Loan : </string>
    <string name="nxtMeetDt"> Next Meeting Date : </string>
    <string name="lastMeetDate"> Last Meeting Date : </string>


    <string name="label.addAcct">Add Account</string>
    <string name="label.addGrp">Add Group</string>
    <string name="lable.grpActivity">Group Details</string>
    

    <string name="hint.shareAmt">Enter Share Amount</string>
    <string name="hint.grpRegNo">Enter Group Reg No</string>
    <string name="hint.grpName">Enter Group Name</string>
    <string name="hint.intRate">Enter interest rate per year</string>
    <string name="hint.grpAcId">Enter Group Account Id</string>
    <string name="hint.grpMemberName">Enter Group Member Name</string>
    <string name="hint.pendLoan">Enter Pending Loan Amount</string>
    <string name="hint.emailId">Enter Email Id</string>
    <string name="hint.phone">Enter Phone No</string>
    <string name="hint.ptId">Enter Photo Id</string>
    <string name="hint.epin">Enter Pin</string>
    <string name="hint.loanDis">Enter Loan Disbursement Amount </string>
    <string name="hint.paidAmt">Enter Total Paid Amount At the Time Of Meeting </string>
    <string name="hint.meetDate">Enter Meeting Date </string>

    <string name="title.grpReg">Group Registration</string>
    <string name="title.meetEntry">Meeting Entry</string>
    <string name="title.acctReg">Account Registration</string>

    <string name="suc_grpAdd">Group Added Success</string>
    <string name="suc_actAdd">Account Added Success</string>
    <string name="suc_MeetAdd">Meeting Added Success</string>

    <string name="err_db">DataBase Error</string>
    <string name="err_grpAdd">Group Added Failed</string>
    <string name="err_actAdd">Account Add Failed</string>
    <string name="err_meetAdd">Meeting Add Failed</string>
</resources>
