<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_column="2"
    tools:context=".AccountRegistrationActivity"
    >

    <TextView android:text="@string/grpAcId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        />
    <EditText android:id="@+id/groupAcId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint.grpAcId"
        android:layout_column="1"
        android:layout_row="0"
        />

    <TextView android:text="@string/grpMemberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        />
    <EditText android:id="@+id/groupMemberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint.grpMemberName"
        android:layout_column="1"
        android:layout_row="1"
        />

    <TextView android:text="@string/penLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"

        />
    <EditText android:id="@+id/pendingLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint.penLoan"
        android:layout_column="1"
        android:layout_row="2"
        android:inputType="numberDecimal"
        />
    <TextView android:text="@string/ltMeetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        />
    <EditText android:id="@+id/lastMeetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:inputType="date"
        />

    <TextView android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        />
    <EditText android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint.emailId"
        android:layout_column="1"
        android:layout_row="4"
        />

    <TextView android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        />
    <EditText android:id="@+id/phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint.phone"
        android:layout_column="1"
        android:layout_row="5"
        android:inputType="number"
        />
    <TextView android:text="@string/ptId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        />
    <EditText android:id="@+id/photoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint.ptId"
        android:layout_column="1"
        android:layout_row="6"
        />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_columnSpan="2" android:id="@+id/addAccount" android:text="@string/add"
        android:onClick="addAccount"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_gravity="center_horizontal"
        />
</GridLayout>